--- a/Security/VpnManager.Security.csproj
+++ b/Security/VpnManager.Security.csproj
@@ -32,7 +32,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevComponents.DotNetBar2">
-      <HintPath>..\VpnManager\bin\Debug\DevComponents.DotNetBar2.dll</HintPath>
+      <HintPath>..\Reference\DevComponents.DotNetBar2.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.8\lib\net40\NLog.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -83,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Remote\RemoteSecurity\DomainLogin.wsdl" />
     <None Include="Remote\RemoteSecurity\item.xsd">
       <SubType>Designer</SubType>
