--- a/VpnManager/VpnManager.csproj
+++ b/VpnManager/VpnManager.csproj
@@ -78,14 +78,21 @@
   <ItemGroup>
     <Reference Include="DevComponents.DotNetBar.Schedule, Version=10.3.0.3, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\DevComponents.DotNetBar.Schedule.dll</HintPath>
+      <HintPath>..\Reference\DevComponents.DotNetBar.Schedule.dll</HintPath>
     </Reference>
     <Reference Include="DevComponents.DotNetBar2, Version=10.3.0.3, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\DevComponents.DotNetBar2.dll</HintPath>
+      <HintPath>..\Reference\DevComponents.DotNetBar2.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.8\lib\net40\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Security">
+      <HintPath>..\Reference\Security.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>True</Private>
     </Reference>
@@ -213,6 +220,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\DataSources\Core.DTO.InfoDto.datasource" />
     <None Include="Properties\DataSources\VpnManager.DTO.InfoDto.datasource" />
@@ -237,10 +245,6 @@
     <Folder Include="UC\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\FileTransferTest\FileTransferTest\FileTransferTest.csproj">
-      <Project>{c308881f-019f-4230-9299-e5f5f9ea2f1d}</Project>
-      <Name>FileTransferTest</Name>
-    </ProjectReference>
     <ProjectReference Include="..\CoreInterface\VpnManager.Interface.csproj">
       <Project>{118aff2c-3572-4d98-aa9c-c554eb7435b5}</Project>
       <Name>VpnManager.Interface</Name>
@@ -248,10 +252,6 @@
     <ProjectReference Include="..\Core\VpnManager.Core.csproj">
       <Project>{834509DE-2AC2-44B2-80B6-354DB8FFEF26}</Project>
       <Name>VpnManager.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FileTransferServer\FileTransferServer.csproj">
-      <Project>{05380d54-e7fa-4c65-83dd-26ce0e074ac4}</Project>
-      <Name>FileTransferServer</Name>
     </ProjectReference>
     <ProjectReference Include="..\Security\VpnManager.Security.csproj">
       <Project>{7AA69A2E-61E3-4A77-B48C-CE66F9DB3E2F}</Project>
