--- a/VpnManager/packages.config
+++ b/VpnManager/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NLog" version="4.4.8" targetFramework="net40" />
+  <package id="Quamotion.RemoteViewing.Windows.Forms" version="1.0.7" targetFramework="net40" />
 </packages>
