--- a/VpnManager/VpnManager.csproj
+++ b/VpnManager/VpnManager.csproj
@@ -84,10 +84,26 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Reference\DevComponents.DotNetBar2.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net40\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net40\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.4.8\lib\net40\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RemoteViewing, Version=0.9.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RemoteViewing.0.9.1\lib\RemoteViewing.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RemoteViewing.Windows.Forms, Version=0.9.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RemoteViewing.0.9.1\lib\RemoteViewing.Windows.Forms.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Security">
@@ -96,6 +112,7 @@
     <Reference Include="System">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration">
       <Private>True</Private>
     </Reference>
@@ -153,6 +170,12 @@
     <Compile Include="PrintConnectionDetails.Designer.cs">
       <DependentUpon>PrintConnectionDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="UC\VNC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC\VNC.Designer.cs">
+      <DependentUpon>VNC.cs</DependentUpon>
+    </Compile>
     <Compile Include="WizardConnection.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +189,9 @@
       <DependentUpon>PrintConnectionDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Report\Report1.rdlc" />
+    <EmbeddedResource Include="UC\VNC.resx">
+      <DependentUpon>VNC.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WizardConnection.resx">
       <DependentUpon>WizardConnection.cs</DependentUpon>
     </EmbeddedResource>
@@ -241,9 +267,7 @@
     </Compile>
     <None Include="VpnManager_TemporaryKey.pfx" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UC\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\CoreInterface\VpnManager.Interface.csproj">
       <Project>{118aff2c-3572-4d98-aa9c-c554eb7435b5}</Project>
