--- a/VpnManager/packages.config
+++ b/VpnManager/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.3" targetFramework="net40" />
   <package id="NLog" version="4.4.8" targetFramework="net40" />
+  <package id="Quamotion.RemoteViewing" version="1.0.7" targetFramework="net40" />
   <package id="Quamotion.RemoteViewing.Windows.Forms" version="1.0.7" targetFramework="net40" />
+  <package id="RemoteViewing" version="0.9.1" targetFramework="net40" />
 </packages>
