--- a/VpnManagerWPF/App.config
+++ b/VpnManagerWPF/App.config
@@ -1,6 +1,44 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <connectionStrings>
+    <add name="VpnManagerEntities" connectionString="metadata=res://*/VpnManagerEntity.csdl|res://*/VpnManagerEntity.ssdl|res://*/VpnManagerEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=172.24.0.24;Initial Catalog=VPN_MANAGER;Persist Security Info=True;User ID=sa;Password=E80SQLh24!;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <appSettings>
+    <add key="FilesLocation" value="C:\\h24ConnectionManager\\" />
+    <add key="Domain" value="elettric80" />
+    <add key="Server" value="LDAP://elettric80.lan" />
+    <add key="SecurityDb" value="Data Source=E:\Projects\Vpn\VpnManager\Security\DbSecurity\Security.sdf;Persist Security Info=True" />
+    <add key="ShareFolder" value="C:\Temp" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding name="EndPointConfiguration" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:50:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="1000" maxBufferPoolSize="524288" maxBufferSize="2147483647" maxConnections="100" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="2147483647" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="None" />
+        </binding>
+      </netTcpBinding>
+    </bindings>
+    <client>
+      <endpoint address="net.tcp://172.24.0.24:8000/SecurityService.DomainLogin" binding="netTcpBinding" bindingConfiguration="EndPointConfiguration" contract="RemoteSecurity.IContract" />
+    </client>
+  </system.serviceModel>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
