--- a/VpnManager/app.config
+++ b/VpnManager/app.config
@@ -18,7 +18,8 @@
     </VpnManager.Properties.Settings>
   </userSettings>
   <connectionStrings>
-    <add name="VpnManagerEntities" connectionString="metadata=res://*/VpnManagerEntity.csdl|res://*/VpnManagerEntity.ssdl|res://*/VpnManagerEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=172.24.0.24;Initial Catalog=VPN_MANAGER;Persist Security Info=True;User ID=sa;Password=E80SQLh24!;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="VpnManagerEntities" connectionString="metadata=res://*/VpnManagerEntity.csdl|res://*/VpnManagerEntity.ssdl|res://*/VpnManagerEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=172.24.0.24;Initial Catalog=VPN_MANAGER;Persist Security Info=True;User ID=sa;Password=E80SQLh24!;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="VpnManagerEntities" connectionString="metadata=res://*/VpnManagerEntity.csdl|res://*/VpnManagerEntity.ssdl|res://*/VpnManagerEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.;Initial Catalog=VPN_MANAGER;Persist Security Info=True;User ID=sa;Password=StandardE80;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="FilesLocation" value="C:\\h24ConnectionManager\\" />
