--- a/VpnManagerWPF/App.config
+++ b/VpnManagerWPF/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="VpnManagerEntities" connectionString="metadata=res://*/VpnManagerEntity.csdl|res://*/VpnManagerEntity.ssdl|res://*/VpnManagerEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=172.24.0.24;Initial Catalog=VPN_MANAGER;Persist Security Info=True;User ID=sa;Password=E80SQLh24!;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="VpnManagerEntities" connectionString="metadata=res://*/VpnManagerEntity.csdl|res://*/VpnManagerEntity.ssdl|res://*/VpnManagerEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.;Initial Catalog=VPN_MANAGER;Persist Security Info=True;User ID=sa;Password=StandardE80;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="FilesLocation" value="C:\\h24ConnectionManager\\" />
