--- a/VpnManagerWPF/packages.config
+++ b/VpnManagerWPF/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="3.2.0" targetFramework="net461" />
+  <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net461" />
